--- a/xmWallpaper/文件夹/Small Launchers.ini
+++ b/xmWallpaper/文件夹/Small Launchers.ini
@@ -14,31 +14,31 @@ Colour1=red
 Colour2=orange
 Colour3=blue
 
-SLP1=E:\Games
+SLP1=F:\Games
 SLT1=游戏
 
-SLP2=E:\视频
-SLT2=视频
+SLP2=F:\steam\steamapps\common
+SLT2=steam游戏
 
-SLP3=F:\桌面\图片
+SLP3=E:\桌面\图片
 SLT3=图片
 
-SLP4=D:\MOD
+SLP4=F:\mod
 SLT4=Mod
 
-SLP5=F:\桌面
-SLT5=移动桌面
+SLP5=E:\mod
+SLT5=制作Mod
 
-SLP6=D:\RJ
+SLP6=E:\RJ
 SLT6=软件
 
 SLP7=C:\Users\xiaom\Desktop
 SLT7=桌面
 
-SLP8=E:\steam\steamapps\common
-SLT8=steam游戏
+SLP8=E:\桌面
+SLT8=移动桌面
 
-SLP9=E:\站点
+SLP9=F:\站点
 SLT9=站点
 
 
